--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>pcpnru</groupId>
-  <artifactId>pcpnru</artifactId>
+  <groupId>dsc</groupId>
+  <artifactId>dsc</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>pcpnru</name>
+  <name>dsc</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -89,6 +89,6 @@
 	</dependency>
   </dependencies>
   <build>
-    <finalName>pcpnru</finalName>
+    <finalName>dsc</finalName>
   </build>
 </project>
